--- a/src/css/donde-estoy.css
+++ b/src/css/donde-estoy.css
@@ -1,1 +1,130 @@
-*{}
+/* RESET CSS */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* CUSTOM STYLES */
+body {
+    font-family: 'Kodchasan', sans-serif;
+    background-color: #f0f0f0;
+    color: #333;
+}
+header {
+    width: 100%;
+}
+#logo-container {
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    padding: 1em;
+    margin: 1% 0;
+}
+
+#atomic-numer {
+    color: #fff;
+    background-color: #61B323;
+    padding: 10px;
+}
+h1 {
+    display: inline;
+    text-align: left;
+    font-size: 2.5em;
+    margin-left: 1em;
+    margin-top: 0.5em;
+    color: #333;
+    text-decoration: none;
+}
+a {
+    text-decoration: none;
+    color: #333;
+}
+nav {
+	text-align:center;
+	width:100%;
+	position:relative;
+	height:auto;
+	overflow:hidden;
+	background:none;
+    border-bottom:1px solid #000;
+}
+.active {
+    background-color: #FADE52;
+    border-radius: 25px 25px 0 0;
+}
+nav ul {
+	text-align:center;;
+}
+nav ul li {
+	display:inline-block;
+}
+nav ul li a {
+	display:inline-block;
+	padding:1em 3em;
+	text-decoration:none;
+	font-size:16px;
+}
+nav ul li a:hover {
+	
+}
+#carousel-container {
+    margin: 5% 10%;
+}
+h2 {
+    text-align: left;
+    font-size: 2em;
+    font-weight: bold;
+    margin: 1em 0;
+    color: #333;
+}
+.arrow {
+  width: 25px;
+  height: 25px;
+  border: solid #333;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-left: 1em;
+}
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
