--- a/src/css/curiosidades.css
+++ b/src/css/curiosidades.css
@@ -1,1 +1,38 @@
-*{}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+    background-color: #fff;
+}
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #F88C8C;
+    padding: 20px;
+    font-size: 50px;
+}
+h2, 
+.subtitle {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    color: #436436;
+    font-size: 30px;
+}
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+    padding: 1rem;
+  }
+.cards-container article {
+    background-color: #F88C8C;
+    border-radius: 12px;
+    padding: 1rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+}
+.cards-container article:hover {
+    transform: scale(1.03);
+}
