--- a/src/css/donde-estoy.css
+++ b/src/css/donde-estoy.css
@@ -235,35 +235,52 @@ p {
 }
 
 .carousel-item {
-  display: none;
+    display: none;
 }
 
-.carousel-item > img {
-    width: 200px;
+.carousel-item>img {
+    width: auto;
+    max-height: 300px;
 }
+
+.message {
+    border-radius: 20px 20px 20px 0;
+    padding: 8px 15px;
+    margin-bottom: 30px;
+    margin-right: 85px;
+    max-width: 300px;
+    background-color: #61B323;
+    color: #fff;
+    justify-self: right;
+}
+
+
+
 
 #carousel-nav {
     text-align: center;
 }
 
-.prev, .next {
-  cursor: pointer;
-  padding: 10%;
-  color: #333;
+.prev,
+.next {
+    cursor: pointer;
+    padding: 10%;
+    color: #333;
 }
 
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
 }
 
- .carousel-item-active, .dot:hover {
-  background-color: #717171;
+.carousel-item-active,
+.dot:hover {
+    background-color: #61B323;
 }
 
 h2 {
@@ -393,6 +410,10 @@ footer {
 
     #carousel-container p {
         width: 100%;
+    }
+
+    .message {
+        margin-right: 0;
     }
 
     #cards-container {
