--- a/src/css/donde-estoy.css
+++ b/src/css/donde-estoy.css
@@ -243,6 +243,14 @@ p {
     max-height: 300px;
 }
 
+h5 {
+    margin-bottom: 5px;
+    width: 300px;
+    justify-self: right;
+    margin-right: 9%;
+    text-align: left;
+}
+
 .message {
     border-radius: 20px 20px 20px 0;
     padding: 8px 15px;
@@ -411,7 +419,11 @@ footer {
     #carousel-container p {
         width: 100%;
     }
-
+    
+    h5 {
+        margin-right: 0;
+    }
+    
     .message {
         margin-right: 0;
     }
