--- a/src/css/donde-estoy.css
+++ b/src/css/donde-estoy.css
@@ -218,6 +218,10 @@ nav ul li:hover {
     border-radius: 25px 25px 0 0;
 }
 
+#fa-bars-menu {
+    display: none;
+}
+
 /* MAIN */
 
 main>div {
@@ -227,6 +231,8 @@ main>div {
 p {
     line-height: 2;
 }
+
+/* CAROUSEL */
 
 #carousel-container p {
     width: 70%;
@@ -247,22 +253,22 @@ p {
 }
 
 h5 {
+    position: relative;
+    left: 60%;
+    padding-left: 15px;
     margin-bottom: 5px;
-    width: 300px;
-    justify-self: right;
-    margin-right: 9%;
     text-align: left;
 }
 
 .message {
     border-radius: 20px 20px 20px 0;
     padding: 8px 15px;
+    position: relative;
+    left: 60%;
     margin-bottom: 30px;
-    margin-right: 85px;
     max-width: 300px;
     background-color: #61B323;
     color: #fff;
-    justify-self: right;
 }
 
 #carousel-nav {
@@ -405,29 +411,70 @@ footer {
     vertical-align: sub;
 }
 
-/* RESPONSIVE */
+/* RESPONSIVE DESIGN */
 
 @media only screen and (max-width: 992px) {
-    nav ul li {
-        display: block;
-        width: 100%;
-        border-bottom: 1px solid #333;
-    }
-
-    #arrow-left-header {
+    /* RESPONSIVE NAV */
+     #arrow-left-header {
+        width: 15px;
+        height: 15px;
         margin-left: 1em;
     }
+
+    h1 {
+        font-size: 2em;
+    }
+
+     .topnav>ul>li:not(:first-child) {
+        display: none;
+    }
+
+    .topnav>ul>li#fa-bars-menu {
+        float: right;
+        display: block;
+    }
+
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive li#fa-bars-menu a {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive>ul>li {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    nav ul li:hover {
+        background-color: #fff;
+    }
+
+    .active {
+        background-color: #fff;
+        border-radius: 0;
+    }
+
+    nav ul {
+        text-align: left;
+    }
+    
+    /* RESPONSIVE CAROUSEL */
 
     #carousel-container p {
         width: 100%;
     }
-    
+
     h5 {
-        margin-right: 0;
+        left: 15%;
     }
-    
+
     .message {
-        margin-right: 0;
+        left: 15%;
     }
 
     #cards-container {
