--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,86 @@
 *{}
+/* NAV */
+
+header {
+    width: 100%;
+}
+
+#logo-container {
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    padding: 1em;
+    margin: 1% 0;
+}
+
+#arrow-left-header {
+    width: 25px;
+    height: 25px;
+    border: solid #333;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-left: 3em;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+#atomic-numer {
+    color: #fff;
+    background-color: #61B323;
+    padding: 10px;
+}
+
+h1 {
+    display: inline;
+    text-align: left;
+    font-size: 2.5em;
+    margin-left: 1em;
+    margin-top: 0.5em;
+    color: #333;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+nav {
+    text-align: center;
+    width: 100%;
+    position: relative;
+    height: auto;
+    overflow: hidden;
+    background: none;
+    border-bottom: 1px solid #000;
+}
+
+.active {
+    background-color: #FADE52;
+    border-radius: 25px 25px 0 0;
+}
+
+nav ul {
+    text-align: center;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    display: inline-block;
+    padding: 1em 3em;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+nav ul li:hover {
+    background-color: rgba(250, 222, 82, 0.5);
+    border-radius: 25px 25px 0 0;
+}
+
+#fa-bars-menu {
+    display: none;
+}
