fixed responsive nav

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,85 +1,5 @@
 /* RESET CSS */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+* {
     margin: 0;
     padding: 0;
     border: 0;
@@ -87,19 +7,8 @@ video {
     font: inherit;
 }
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
+html {
+    overflow: auto;
 }
 
 body {
@@ -111,33 +20,9 @@ ul {
     list-style: none;
 }
 
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
 /* NAV */
-
-header {
-    width: 100%;
-}
-
 #logo-container {
     display: flex;
-    align-items: left;
     justify-content: left;
     padding: 1em;
     margin: 1% 0;
@@ -186,30 +71,23 @@ a {
     border-bottom: 1px solid #000;
 }
 
-.active {
-    background-color: #FADE52;
-    border-radius: 25px 25px 0 0;
-}
-
 nav ul {
     text-align: center;
 }
 
 nav ul li {
     display: inline-block;
+    border-radius: 25px 25px 0 0;
+    margin: 0 3px;
 }
 
 #myTopnav ul li a {
     display: inline-block;
-    padding: 1em 3em;
+    padding: 1em 2em;
     text-decoration: none;
     font-size: 1.2em;
 }
 
-#myTopnav ul li:hover {
-    background-color: rgba(250, 222, 82, 0.5);
-    border-radius: 25px 25px 0 0;
-}
 
 #fa-bars-menu {
     display: none;
@@ -234,7 +112,6 @@ footer {
     width: 170px;
     line-height: 60px;
     padding: 10px 40px;
-
 }
 
 #footer-nav ul li a {
@@ -286,11 +163,26 @@ footer {
 
 
 /* RESPONSIVE DESIGN */
+@media only screen and (min-width: 1380px) {
+    body {
+        overflow-x: hidden;
+    }
+}
+
+@media only screen and (max-width: 1380px) {
+    #myTopnav ul li {
+        margin: 15px;
+    }
+
+    #myTopnav ul li {
+        border-radius: 25px;
+    }
+}
 
 @media only screen and (max-width: 992px) {
+
     /* RESPONSIVE NAV */
-    
-     #arrow-left-header {
+    #arrow-left-header {
         width: 15px;
         height: 15px;
         margin-left: 1em;
@@ -300,38 +192,39 @@ footer {
         font-size: 2em;
     }
 
-     .topnav>ul>li:not(:first-child) {
+    #myTopnav ul li {
+        margin: 0;
+    }
+
+    .topnav>ul>li:not(:first-child) {
         display: none;
     }
 
+    .topnav>ul>li:first-child {
+        width: 80%;
+    }
+
     .topnav>ul>li#fa-bars-menu {
-        float: right;
         display: block;
+        background-color: rgba(250, 222, 82, 0.5);
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 20%;
+    }
+
+    #myTopnav ul li {
+        border-radius: 0;
     }
 
     .topnav.responsive {
         position: relative;
     }
 
-    .topnav.responsive li#fa-bars-menu a {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
     .topnav.responsive>ul>li {
         float: none;
         display: block;
         text-align: left;
-    }
-
-    #myTopnav ul li:hover {
-        background-color: #fff;
-    }
-
-    .active {
-        background-color: #fff;
-        border-radius: 0;
     }
 
     #myTopnav ul {
