--- a/src/css/style.css
+++ b/src/css/style.css
@@ -68,15 +68,17 @@ a {
     height: auto;
     overflow: hidden;
     background: none;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #436436;
 }
 
 nav ul {
     text-align: center;
+    
 }
 
 nav ul li {
     display: inline-block;
+    border-bottom: 4px solid #436436;
     border-radius: 25px 25px 0 0;
     margin: 0 3px;
 }
@@ -88,6 +90,10 @@ nav ul li {
     font-size: 1.2em;
 }
 
+.active {
+    text-transform: uppercase;
+    font-weight: bold;
+}
 
 #fa-bars-menu {
     display: none;
@@ -194,6 +200,7 @@ footer {
 
     #myTopnav ul li {
         margin: 0;
+        border-bottom: none;
     }
 
     .topnav>ul>li:not(:first-child) {
