--- a/src/css/style.css
+++ b/src/css/style.css
@@ -120,7 +120,8 @@ footer {
     border-radius: 10px;
     margin: 3% 15%;
     text-align: center;
-    width: 170px;
+    max-width: 270px;
+    min-width: 100px;
     line-height: 60px;
     padding: 10px 40px;
     transition: all .5s ease-in-out;
